:sparkles: feat: adiciona página com as infos de cada filme

--- a/frontend/src/Components/css/MovieSearch.css
+++ b/frontend/src/Components/css/MovieSearch.css
@@ -31,7 +31,7 @@ form > button {
     padding: 4px;
 }
 
-.card {
+#card {
     background-color: red;
     border-radius: 12px;
     margin-bottom: 4vh;
